--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "deploy:local": "echo 'Building for local deploy...' && npm run build",
+  "serve": "serve -s build -l 3001"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
