--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "coffee-machine",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ayhan-gadjibalayev.github.io/coffee-machine/",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
@@ -18,13 +19,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
-  "deploy:local": "echo 'Building for local deploy...' && npm run build",
-  "serve": "serve -s build -l 3001"
-},
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -b master"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -42,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0",
+    "install": "^0.13.0"
   }
 }
+
